--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,5 +67,5 @@ if (DEFINED UNIT_TESTS)
 endif()
 
 set_property(GLOBAL PROPERTY MOKA_RENDERER 1)
-set_property(GLOBAL PROPERTY MOKA_RENDERER_INCS "${CMAKE_CURRENT_SOURCE_DIR}/inc")
+set_property(GLOBAL PROPERTY MOKA_RENDERER_INCS "${CMAKE_CURRENT_SOURCE_DIR}/inc" ${MOKA_RENDERER_DEP_INCS})
 set_property(GLOBAL PROPERTY MOKA_RENDERER_LIBS MokaRenderer)
